fixed fluid mechanics and added text

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     </style>
 </head>
 <body>
+    <div style="position: fixed; top: 20px; left: 50%; transform: translateX(-50%); font-family: Arial, sans-serif; font-size: 24px; color: #333;">
+        Throwing AI (and coffee) at everything.
+    </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/cannon.js/0.6.2/cannon.min.js"></script>
     <script src="simulation.js"></script>
